--- a/0/resumen.tex
+++ b/0/resumen.tex
@@ -8,6 +8,8 @@
 Con los casos de cáncer de tiroides incrementando cada año en todo el mundo, los especialistas en el área y diversos investigadores se han visto en la necesidad de encontrar un método probado o herramienta eficaz que ayude a los médicos y radiólogos, con distintos niveles de experiencia, a realizar detecciones y diagnósticos de nódulos tiroideos de forma más rápida y con menos errores, incluso con la capacidad de llegar a ser una opción factible en el contexto de las clínicas u hospitales de bajos recursos y poco personal especializado para realizar un diagnóstico temprano de este mal y así evitar futuras complicaciones de cáncer avanzado, ya que existe un porcentaje nada despreciable que un nódulo llegue a convertirse con el paso del tiempo, y sin tratamiento, en un problema mucho más grave difícil de sobrellevar. 
 
 Por estos motivos, y tomando en cuenta el grado de desarrollo actual del extenso campo de la Inteligencia Artificial y junto con el fácil acceso al gran poder computacional, en la presente investigación se plantea desarrollar un modelo de Deep Learning que sirva como herramienta de soporte en el diagnóstico de nódulos tiroideos para mejorar la eficacia y eficiencia del diagnóstico a través de imágenes de ultrasonido.
+
+Se utilizaron las modernas técnicas del Deep Learning para desarrollar los distintos modelos de clasificación de imágenes de ultrasonido de nódulos tiroideos. Las arquitecturas empleadas en esta investigaciób fueron las basadas en Redes Neuronales Convolucionales y los Vision Transformers, además de distintos modelos híbridos (CNN + ViT). También se hicieron pruebas con una nueva forma de Aumento de Datos empleando la red DCGAN. Todos las métricas obtenidas de los modelos fueron analizadas para lograr determinar el de mejor desempeño. Es así que se obtuvo un modelo con arquitectura híbrida con un valor de 77.20\% de Accuracy, 77.97\% de Recall y 67.65\% de Precision, siendo este el modelo de mejor desempeño frente a los demás entrenados.
 \newline
 
 \textbf{Palabras claves: } Aprendizaje profundo, Redes Neuronales Convolucionales, Vision Transfomers, imágenes, ultrasonido, tiroides, clasificación.
@@ -19,6 +21,8 @@ Por estos motivos, y tomando en cuenta el grado de desarrollo actual del extenso
 With thyroid cancer cases increasing every year around the world,  specialists and researchers have found it necessary to find a proven method or effective tool to help physicians and radiologists, with different levels of experience, to detect and diagnose thyroid nodules more quickly and with fewer errors, Even with the ability to become a feasible option in the context of clinics or hospitals with low resources and few specialized personnel to make an early diagnosis of this disease and thus avoid future complications of advanced cancer, since there is a not insignificant percentage that a nodule becomes with the passage of time, and without treatment, a much more serious problem difficult to cope with. 
 
 For these reasons, and taking into account the current degree of development of the extensive field of Artificial Intelligence and the easy access to great computational power, this research proposes to develop a Deep Learning model that serves as a support tool in the diagnosis of thyroid nodules to improve the effectiveness and efficiency of diagnosis through ultrasound images.
+
+Modern Deep Learning techniques were used to develop the different classification models for ultrasound images of thyroid nodules. The architectures used in this research were based on Convolutional Neural Networks and Vision Transformers, as well different hybrid models (CNN + ViT). A new form of Data Augmentation using the DCGAN network was also tested. All the metrics obtained from the models were analyzed to determine the best performing model. Thus, a model with hybrid architecture was obtained with a value of 77.20\% in Accuracy, 77.97\% in Recall and 67.65\% in Precision, being this the best performing model compared to the others trained.
 \newline
 
 \textbf{Keywords: } Deep Learning, Convolutional Neural Networks, Vision Transfomers, images, ultrasound, thyroid, classification.
