--- a/0/introduccion.tex
+++ b/0/introduccion.tex
@@ -10,4 +10,4 @@ El proceso que se seguirá para desarrollar un modelo eficaz, capaz de reducir e
 
 Esta herramienta de Inteligencia Artificial no pretende ser un sustituto al diagnóstico de un profesional especializado en este tipo de casos. Como se verá más adelante, en las investigaciones presentadas como antecedentes donde se desarrollan modelos capaces de clasificar nódulos en la glándula de tiroides a través de imágenes, el objetivo final es brindar una herramienta eficaz y eficiente que permita a los profesionales del sector a realizar diagnósticos más rápidos. Esto es importante debido a la naturaleza de desarrollo de esta enfermedad, pues con una detección temprana y correcta del tipo de nódulo con el que el especialista se enfrenta, se puede acelerar tratamientos eficaces y evitar aquellos que son totalmente innecesarios para el paciente.
 
-El problema a abordar, y principal incentivo de la investigación, radica en el proceso prolongado y de no tan lata precisión que, de manera general, los médicos o radiólogos han ido desarrollando en el diagnóstico de nódulos tiroidales, además de las escasas herramientas basadas en Inteligencia Artificial en este campo. También observar que los casos de cáncer en esta glándula van en aumento en el Perú y el mundo, genera una preocupación y alta necesidad de desarrollar nuevos y mejores métodos o herramientas junto con los grandes avances tecnológicos como la Inteligencia Artificial que ha desmotrado ser capaz de reducir los índices de errores y mejorar los tiempos en el diagnóstico o clasificación de un nódulo benigno o maligno.
+El problema a abordar, y principal incentivo de la investigación, radica en el proceso prolongado y de no tan alta precisión que, de manera general, los médicos o radiólogos han ido desarrollando en el diagnóstico de nódulos tiroidales, además de las escasas herramientas basadas en Inteligencia Artificial en este campo. También observar que los casos de cáncer en esta glándula van en aumento en el Perú y el mundo, genera una preocupación y alta necesidad de desarrollar nuevos y mejores métodos o herramientas junto con los grandes avances tecnológicos como la Inteligencia Artificial que ha desmotrado ser capaz de reducir los índices de errores y mejorar los tiempos en el diagnóstico o clasificación de un nódulo benigno o maligno.
